@@ -1,3 +1,6 @@
+2025-04-xx [0.4]
+  - Remove state=average labels, labels are optional, we don't use labels except for info
+
 2025-04-15 [0.3]
   - Add timer to add stats that appear after startup
   - More stat name fixes so they are valid metrics
